--- a/Sicherheitskopie/abstract.tex
+++ b/Sicherheitskopie/abstract.tex
@@ -2,13 +2,21 @@
 \begin{itemize}
 	\item in dieser Arbeit wird eine Leistungsuntersuchung an elektrisch, propellergetriebene Fluggeräte, dies umfasst Multicopter und Flächenflugzeuge, durchgeführt. 
 	\item das ziel ist es eine höhe von \SI{10}{km} bis \SI{15}{km} zu erreichen. 
-	\item Der Hintergrund ist die Substitution von Wetterballonen im Einsatz für die Atmosphärenforschung. 
-	\item Diese besitzen viele nachteile, die ein elektrisch, propellergetriebene Fluggeräte nicht besitzt wie die Zerstörung bei jedem Einsatz, die Umweltbelastung und ähnlich
+	\item Der Hintergrund ist die Substitution von Wetterballonen im Einsatz für die Atmosphärenforschung durch ebensolche. 
+	\item Diese besitzen viele nachteile, die ein elektrisch, propellergetriebene Fluggeräte nicht besitzt wie die Zerstörung bei jedem Einsatz, die Umweltbelastung und ähnlich. 
+	\item im März des Jahres 2018 zeigte ein Quadrocopterflug, dass es möglich ist, eine Höhe von mehr als \SI{10000}{m} zu erreichen.
 	\item nachdem ein kurzer Standpunkt der Technik dargelegt wird 
 	\item folgt die beschreibung des für die Untersuchung grundlegenden Programms
-	\item Überprüfung erfolgt mit dem Abgleich der Flugleistungen eines realen Steigflugs auf \SI{12600}{m} und dem im Programm nachgestellten.
+	\item Dabei wird grundlegendes der Flugleistungsberechnung dargelegt sowie die Grenzen und Einschränkungen der verwendeten Modelle erläutert.
+	\item Eine Überprüfung und Validierung erfolgt mit dem Abgleich der Flugleistungen eines realen Steigflugs auf \SI{12600}{m} und dem im Programm nachgestellten.
 	\item Dabei reproduziert das Programm die Flugleistungen akkurat. Es gibt allerdings auch gewisse Abweichungen bzgl. der Motorregler
 	\item nachdem festgestellt wurde, dass das Programm im Rahmen der Modell genau arbeitet werden parameter untersucht
-	\item dabei wird zuerst geklärt, welche Art von Flächenflugzeug sich als effizienter erweist
-	\item dies ist der multicopter
+	\item dabei wird zuerst geklärt, welche Art von Flächenflugzeug sich als effizienter erweist. 
+	\item Im Rahmen der Modelle und in Bezug auf die Rahmenbedungungen durch das Projekt ist dies der multicopter
+	\item Für den Multicopter nun folgend Parameter untersucht. Dies betrifft vor allem die Kenngrößen des Multicopters 
+\end{itemize}
+
+
+\begin{itemize}
+	\item 
 \end{itemize}
