--- a/Sicherheitskopie/parameteruntersuchung.tex
+++ b/Sicherheitskopie/parameteruntersuchung.tex
@@ -87,6 +87,7 @@ An dieser Stelle ist auch die Motor-Propeller Kombination zu beachten. Der Motor
 Mit den oben gemachten Aussagen zu einer Motor-Propeller-Kombination wird im Folgenden der Propeller an die Wahl der Motoren angepasst.
 \textcolor{red}{hier anbringen, dass Effizienz von einem Motor mit geringem kV höher ist, weniger Verluste und weniger Erhitzung, 
 http://rcboats.kiwi/index.php/ct-menu-item-15/ct-menu-item-31/ct-menu-item-43}
+\textcolor{red}{starke Motoren, die hier vonnöten sind bedürfen meist einer Abriegelung der PWM, um das Fluggerät händelbar zu halten, dies verringert die Motorspannung und damit auch die maximale Leistung und letztendlich die Höhe}
 
 
 \subsubsection{Anzahl der Motoren und Propeller}
@@ -325,20 +326,22 @@ Im Rahmen dieser Untersuchung liegen nur Propellerkennfelder mit einer konstante
 
 \subsection{Ergebnisse}
 \begin{figure}[H]
-%\centering
+\centering
 	\includegraphics[scale=0.7]{Diagramme/Verstellpropeller.pdf}
-	\caption{Verstellpropeller}
+	\caption{Einfluss eines idealen (Eigengewicht gleich null) Verstellpropeller auf die maximal erreichbare Höhe}
 	\label{abb:verstellpropeller}
 \end{figure}
-Der zusätzliche Höhengewinn durch einen Verstellpropeller ist gerade einmal \SI{1000}{m}. Die Leistungsparameter beider Propellerarten sind für die ersten \SI{3000}{m} identisch. Dies liegt an der gleichen Propellersteigung. Zuerst ist wieder ein Flug mit maximalen Motorstrom am effizientesten bis die PWM wieder \SI{100}{\%} erreicht und folglich der Motorstrom und der Batteriestrom abfallen. Da die Motorspannung konstant bleibt, bleibt auch die Drehzahl konstant. Die Bahngeschwindigkeit sinkt jedoch kontinuierlich ab. Während sich dieser Zustand beim Propeller mit fester Propellersteigung nicht ändert, ist ab \SI{10000}{m} Steigflug ein Anstellwinkel von \SI{4}{in} für den Verstellpropeller energetisch effizienter. Dies bewirkt, dass die Drehzahl und damit einhergehend die Motorspannung abfällt, während gleichzeitig der Motorstrom zum zweiten Mal auf sein maximales Niveau steigt. Gleichzeitig steigen auch der Wirkungsgrad und die Bahngeschwindigkeit erneut. Dieser Zustand kann ebenfalls wieder solange gehalten werden bis die PWM \SI{100}{\%} erreicht und somit die Bahngeschwindigkeit bis auf \SI{0}{m/s} absinkt. Damit ist das Ende des Steigflugs erreicht. \\
+Der zusätzliche Höhengewinn durch einen Verstellpropeller liegt bei  ca. \SI{1500}{m} (Vgl. Abb \ref{abb:verstellpropeller}). Dabei handelt es sich um einen idealen Verstellpropeller, dessen Verstellmechanismus und -aktuatorik nicht in das Gesamtgewicht einbezogen werden. \\
+Die Leistungsparameter beider Propellerarten sind für die ersten \SI{3000}{m} identisch. Dies liegt an der gleichen Propellersteigung. Danach nimmt die optimale Propellersteigung kontinuierlich zu. Durch die Tatsache, dass die Steigung variabel ist, ist durchgehend ein Flug mit maximaler Motorleistung, d.h. bei einem maximalen Motorstrom und -spannung, möglich. Durch jede Verstellung kommt es zu einem Einbruch der Drehzahl, der sich durch den Verlauf der Motorspannung und der PWM fortpflanzt (entspr. Gleichung \ref{eq:motorspannung} und \ref{eq:pwm}). Bis zu einer Höhe von \SI{13000}{m} hat der Verstellpropeller keinen Einfluss auf die Restladung oder die Batteriespannung. Die deutlich höhere Effizienz des Fluges bei maximalen Motorstrom zeigt sich im Gesamtwirkungsgrad. Durch die mit der Propellersteigungsänderung steigende Bahngeschwindigkeit erhöht sich auch der Propellerwirkungsgrad. Daher erhöht sich auch der Gesamtwirkungsgrad. 
+Ein Vorteil, der in Abb. \ref{abb:verstellpropeller} ersichtlich wird, ist, dass durch eine Erhöhung der Propellersteigung der gleiche, wenn nicht sogar noch mehr Schub, bei einer geringeren Drehzahl durch den Propeller erzeugt werden kann. Dies erhöht den Leistungsüberschuss und letztendlich die erreichbaren Fluggeschwindigkeiten bei voller Motorauslastung. Entsprechend sinkt die Flugzeit.
+Bedeutend ist noch zu erwähnen, dass die Restladung am TOC bei einem Multicopter mit Verstellpropeller noch bedeutend höher ist (insg. noch ca. \SI{20}{\%}) als die bei einem ohne.
 
 
-
-
-
-	Der Vorteil eines Verstellpropellers ist vergleichsweise gering. Dazu müssen auch noch folgende Einschränkungen vorgenommen werden. Der Verstellpropeller kann nur im Rahmen der in der APC-Datenbank vorhanden Propeller modelliert werden. Dies setzt Ungenauigkeiten voraus, da eine kontinuierliche Verstellung nicht nachgebildet werden kann und nur so viele Verstellungen berücksichtigt werden können, wie auch Propeller mit verschiedenen Steigungen in der Datenbank vorhanden sind. \textcolor{red}{Zudem ist man auf die Kennfelder angewiesen.}. An dieser Stelle wurde der Propeller in gewisser Weise idealisiert. So wurde unter anderem die verlängerte Blattaufhängung außer Acht gelassen. Dies führt zu zusätzlichen Verlusten an der Blattwurzel und einer Verringerung des effektiven Radius. Bei einem Propeller mit konstantem Anstellwinkel kann diese sehr kurz gehalten werden, weshalb das profilierte Rotorblatt deutlich früher beginnt. Dies ist bei dem hier modellierten Verstellpropeller nicht berücksichtigt worden.\\
-Weiterhin wurden in dieser Betrachtung das Gewicht des Verstellmechanismus an sich und der Aktuatorik für jeden einzelnen Propeller nicht berücksichtigt. Weiterhin bedeuten die Aktuatoren zusätzliche Verbraucher, die mitunter deutlich schneller zu einem Flug bei \SI{100}{\%} PWM führen würden. Letztendlich ist der fehlende Schub in großen Höhen nicht das Begrenzungsmerkmal, sondern die Drehzahl des Propellers und Motors sowie die Batteriespannung. Letztere macht den Verstellpropeller ein weiteres Stück redundant (Vgl. \textcolor{red}{Anhang}). Mit einem hohen Batteriestrom verschiebt sich der Bereich, in dem ein größere Steigung vorteilhafter ist, noch weiter in größere Höhen. Damit sinkt auch die Einsatzdauer und schließlich der Nutzen. 
-Schlussendlich bringt der Verstellpropeller den Vorteil der Autorotation mit, der weniger für den Steigflug als für den anschließenden Sinkflug von Bedeutung ist. Durch die Autorotation ist ein antriebsloser Sinkflug möglich. Damit könnte die Batterie noch weiter entladen werden bevor ein Sinkflug eingeleitet werden muss, was im Umkehrschluss die erreichbare Höhe steigert. 
+%Zuerst ist wieder ein Flug mit maximalen Motorstrom am effizientesten bis die PWM wieder \SI{100}{\%} erreicht und folglich der Motorstrom und der Batteriestrom abfallen. Da die Motorspannung konstant bleibt, bleibt auch die Drehzahl konstant. Die Bahngeschwindigkeit sinkt jedoch kontinuierlich ab. Während sich dieser Zustand beim Propeller mit fester Propellersteigung nicht ändert, ist ab \SI{10000}{m} Steigflug ein Anstellwinkel von \SI{4}{in} für den Verstellpropeller energetisch effizienter. Dies bewirkt, dass die Drehzahl und damit einhergehend die Motorspannung abfällt, während gleichzeitig der Motorstrom zum zweiten Mal auf sein maximales Niveau steigt. Gleichzeitig steigen auch der Wirkungsgrad und die Bahngeschwindigkeit erneut. Dieser Zustand kann ebenfalls wieder solange gehalten werden bis die PWM \SI{100}{\%} erreicht und somit die Bahngeschwindigkeit bis auf \SI{0}{m/s} absinkt. Damit ist das Ende des Steigflugs erreicht. \\
+Der Vorteil eines Verstellpropellers ist vergleichsweise gering. Dazu müssen auch noch folgende Einschränkungen vorgenommen werden. Der Verstellpropeller kann nur im Rahmen der in der APC-Datenbank vorhanden Propeller modelliert werden. Dies setzt Ungenauigkeiten voraus, da eine kontinuierliche Verstellung nicht nachgebildet werden kann und nur so viele Verstellungen berücksichtigt werden können, wie auch Propeller mit verschiedenen Steigungen in der Datenbank vorhanden sind. Eine kontinuierliche Verstellung würde an dieser Stelle einen glatten Verlauf in der Propellersteigung und somit auch in allen anderen Verläufen erzeugen. \\
+An dieser Stelle wurde der Propeller in gewisser Weise idealisiert. So wurde unter anderem die verlängerte Blattaufhängung außer Acht gelassen. Dies führt zu zusätzlichen Verlusten an der Blattwurzel und einer Verringerung des effektiven Radius. Bei einem Propeller mit konstantem Anstellwinkel kann diese sehr kurz gehalten werden, weshalb das profilierte Rotorblatt deutlich früher beginnt. Dies ist bei dem hier modellierten Verstellpropeller nicht berücksichtigt worden. Weiterhin birgt die Verwendung von Propellerkennfeldern mit einem fester Ansteigung gewisse Ungenauigkeiten. Für die Propeller mit fester Steigung kann vorausgesetzt werden, dass diese im Rahmen eines optimalen Schwebeflugrotors \cite[S.197-S.205]{Wall.2015} optimiert wurde. Ein Verstellpropeller muss jedoch eine gewisse Bandbreite an Betriebspunkten abdecken (Steig-, Vorwärtsflug oder Autorotation), die durch eine einseitige Optimierung des Propellers eine Verschlechterung für die anderen bedeutet \cite[S.203]{Wall.2015}. Es ist daher auch mit Diskrepanzen für das Leistungsverhalten des Verstellpropellers in Bezug auf Propeller mit fester Steigung zu rechnen, die nicht den Kennfeldern zu entnehmen ist. \textcolor{red}{Dieser Kompromiss in der Propellergestaltung in mehrere Richtungen verringert die Flugleistungen des Verstellpropellers bei gleichem Pitch im Vergleich zum Propeller mit konstanten Pitch}\\
+Weiterhin wurden in dieser Betrachtung das Gewicht des Verstellmechanismus an sich und der Aktuatorik für jeden einzelnen Propeller nicht berücksichtigt. Zusätzlich bedeuten die Aktuatoren zusätzliche Verbraucher, die mitunter deutlich schneller zu einem Flug bei \SI{100}{\%} PWM führen würden. Letztendlich ist der fehlende Schub in großen Höhen nicht das Begrenzungsmerkmal, sondern die Drehzahl des Propellers und Motors sowie die Batteriespannung, kurz der Leistungsüberschuss. Letztere macht den Verstellpropeller ein weiteres Stück redundant (Vgl. \textcolor{red}{Anhang}). Mit einem hohen Batteriestrom verschiebt sich der Bereich, in dem ein größere Steigung vorteilhafter ist, noch weiter in größere Höhen. Damit sinkt auch die Einsatzdauer und schließlich der Nutzen. 
+Schlussendlich bringt der Verstellpropeller den Vorteil der Autorotation mit, der weniger für den Steigflug als für den anschließenden Sinkflug von Bedeutung ist. Durch die Autorotation ist ein antriebsloser Sinkflug möglich. Damit könnte die Batterie noch weiter entladen werden bevor ein Sinkflug eingeleitet werden muss, was im Umkehrschluss die erreichbare Höhe steigert. Außerdem erhöht ein Verstellpropeller die Restladung am TOC, sodass das volle Potential dieser Propellerart ausgeschöpft werden kann, bevor ein Sinkflug eingeleitet werden muss. 
 
 %\begin{itemize}
 %	\item Der Verstellpropeller bringt gerade einmal einen Vorteil von \SI{1000}{m}Höhe.
@@ -364,12 +367,12 @@ Schlussendlich bringt der Verstellpropeller den Vorteil der Autorotation mit, de
 Eine häufige Begrenzung der Leistung ist die maximale Drehzahl des Motors oder des Propellers. Diese nimmt mit großen Höhen stark zu. Ein stufenlos verstellbares Getriebe bringt Vorteile in der Begrenzung der maximalen Drehzahl (Machzahleffekte, Strömungsablösung etc.), dass heißt durch den Einsatz eines Getriebes kann die Drehzahl für den Motor entsprechend angepasst werden, sodass diese nicht mehr den Flaschenhals für einen Steigflug darstellt.
 Die Übersetzung für ein Getriebe 
 \begin{equation}
-	i = \frac{\omega_{an}}{\omega_{ab}} 
+	i = \frac{\Omega_{an}}{\Omega_{ab}} 
 	\label{eq:getriebe_uebersetzung}
 \end{equation}
-setzt sich in Abhängigkeit der Drehzahlen aus dem Verhältnis der Eingangsdrehzahl \ensuremath{\omega_{an}} zur Ausgangsdrehzahl \ensuremath{\omega_{ab}} zusammen. Weiterhin gilt für die Leistung, dass unter Berücksichtigung von Verlusten innerhalb des Getriebes die Eingangsleistung \ensuremath{P_{an}} gleich der Ausgangsleistung \ensuremath{P_{ab}} ist
+setzt sich in Abhängigkeit der Drehzahlen aus dem Verhältnis der Eingangsdrehzahl \ensuremath{\Omega_{an}} zur Ausgangsdrehzahl \ensuremath{\Omega_{ab}} zusammen. Weiterhin gilt für die Leistung, dass unter Berücksichtigung von Verlusten innerhalb des Getriebes die Eingangsleistung \ensuremath{P_{an}} gleich der Ausgangsleistung \ensuremath{P_{ab}} ist
 \begin{equation}
-	P_{an} = \eta_{Getriebe} \cdot \omega_{an}\cdot M_{an} = \omega_{ab}\cdot M_{ab} = P_{ab}
+	P_{an} = \eta_{Getriebe} \cdot \Omega_{an}\cdot M_{an} = \Omega_{ab}\cdot M_{ab} = P_{ab}
 	\label{eq:getriebe_leistung}
 \end{equation} 
 mit dem Wirkungsgrad 
@@ -379,11 +382,11 @@ mit dem Wirkungsgrad
 \end{equation}
 Aus den Gleichungen \ref{eq:getriebe_uebersetzung} bis \ref{eq:getriebe_wirkungsgrad} ergeben sich nun für die aus dem Propellerkennfeld ermittelten Drehzahl und dem Drehmoment die neue Drehzahl für den Motor
 \begin{equation}
-	\omega_{neu} = \omega_{Kennfeld}\cdot i
+	\Omega_{neu} = \Omega_{Kennfeld}\cdot i
 \end{equation}
 und aus der Leistung
 \begin{equation}
-	M_{neu} = \frac{P_{ab}}{\omega_{neu}}.
+	M_{neu} = \frac{P_{ab}}{\Omega_{neu}}.
 \end{equation}
 das neue Drehmoment.
 Die günstigste Übersetzung wird analog zum Steigwinkel des Flächenflugzeuges und analog zur Steiggeschwindigkeit durch eine Iteration über der Übersetzung \ensuremath{i} gefunden. Das Entscheidungskriterium ist auch hier die minimal aufgebrachte Energiemenge für den jeweiligen Höhenschritt. An dieser Stelle ist das Getriebegewicht \texttt{m\_Getriebe} nicht zu vernachlässigen. Diese fließt mit der Anzahl der Propeller in die Berechnung der Gesamtmasse mit ein
@@ -398,14 +401,28 @@ Die günstigste Übersetzung wird analog zum Steigwinkel des Flächenflugzeuges 
 	\item KV Wert beeinflusst Übersetzung
 \end{itemize}
 
-\subsection{Ergebnis}
-Der Einsatz eines idealen, stufenlosen Getriebes (\ensuremath{m_{Getriebe} = 0} und \ensuremath{\eta_{Getriebe} = 1}) erzeugt einen erheblichen Höhengewinn. Für die gewählte Konstellation bedeutet dies einen TOC von ca. \SI{17000}{m}. Das ist ein Zuwachs von mindestens \SI{2000}{m} zum Multicopter ohne Getriebe. Das CVT (continuously variable transmission)-Getriebe übersetzt dabei die Drehzahl des Motors, das heißt die Propellerdrehzahl ist größer als die des Motors. \\
-Zu Beginn des Fluges übersetzt das Getriebe die Motordrehzahl mit einer Übersetzung von \SI{1,4}{} ins Langsame. die Drehzahl des Propellers beträgt dabei \SI{20000}{U/min}. Es folgt eine hyperbolische Abnahme der Übersetzung durch das Getriebe und damit auch der Drehzahl. Der Motor wird bei maximaler Last betrieben, das heißt beim maximalen Motorstrom von \SI{25}{A} und bei Volllast (PWM =  \SI{100}{\%}). Die PWM schwankt in einem Bereich von \SI{5}{\%} in der Nähe von \SI{100}{\%}. Die Sprünge, die im Verlauf der Drehzahl, Des Motorstroms und der PWM zu verzeichnen sind, können auf die gewählte Diskretisierung der Getriebeübersetzung zurückgeführt werden. \textcolor{red}{Das stufenlose Getriebe ermöglicht den optimalen Betrieb des Motors, welcher in diesem Fall bei voller Leistungsentnahme ist. Es ermöglicht eine derartige Wandlung des der Drehzahl, sodass einerseits die PWM bei \SI{100}{\%} ist und andererseits der Motorstrom dem maximalen Dauerstrom entspricht. Also ein Betriebspunkt bei Volllast. Dies kann durch das Getriebe dauerhaft gehalten werden.} 
-Die Steiggeschwindigkeit weist einen beinahe asymptotischen Verlauf von anfänglich \SI{21}{m/s} an den Grenzwert von \SI{26}{m/s} auf. Entsprechend dieser hohe Geschwindigkeiten braucht der Quadrocopter nur \SI{14}{min} und \SI{9}{s} bis zum Erreichen der maximalen Höhe.
+\subsection{Ergebnisse}
+\begin{figure}[H]
+\centering
+	\includegraphics[scale=0.7]{Diagramme/Getriebe.pdf}
+	\caption{Einfluss eines idealen (Eigengewicht gleich null und Getriebewirkungsgrad gleich \SI{100}{\%}) Getriebes auf die maximal erreichbare Höhe}
+	\label{abb:getriebe}
+\end{figure}
 
+Der Einsatz eines idealen, stufenlosen Getriebes (\ensuremath{m_{Getriebe} = 0} und \ensuremath{\eta_{Getriebe} = 1}) erzeugt einen erheblichen Höhengewinn (Vgl. Abb. \ref{abb:getriebe}). Für die gewählte Konstellation bedeutet dies einen TOC von ca. \SI{17000}{m}. Das ist ein Zuwachs von mindestens \SI{2000}{m} zum Multicopter ohne Getriebe. Das CVT-Getriebe übersetzt dabei hauptsächlich die Drehzahl des Motors derart, dass dieser bei voller Spannung (\SI{100}{\%} PWM) laufen kann und das für den ganzen Flug über. Aus der Reihenfolge des Programms ist die Wandlung genau umgekehrt. In diesem wird die Drehzahl des Propellers für den Motor angepasst. Mit dieser Blickweise wird die Propellerdrehzahl zuerst ins Schnelle übersetzt und anschließend ab ca. \SI{7000}{m} Höhe ins Langsame, sodass der oben beschriebene Zustand kontinuierlich gehalten werden kann. Auf Grund der Tatsache, dass die Leistung über einem Getriebe konstant bleibt und hier vorerst keine weiteren Verluste berücksichtigt werden, ist der Verlauf des Drehmoments komplementär zu dem Drehzahl, sodass die Beziehung in Gleichung \ref{eq:getriebe_leistung} erhalten bleibt.
+
+\begin{figure}[H]
+\centering
+	\includegraphics[scale=0.5]{Diagramme/Drehzahl_und_Drehmoment.pdf}
+	\caption{Verdeutlichung der Übersetzung des Getriebes zwischen Motor und Propeller}
+	\label{abb:getriebe_dud}
+\end{figure}
+
+Zu Beginn des Fluges übersetzt das Getriebe die Motordrehzahl mit einer Übersetzung von \SI{1,4}{} ins Langsame. die Drehzahl des Propellers beträgt dabei \SI{20000}{U/min}. Es folgt eine hyperbolische Abnahme der Übersetzung durch das Getriebe und damit auch der Drehzahl. Der Motor wird bei maximaler Last betrieben, das heißt beim maximalen Motorstrom von \SI{25}{A} und bei Volllast (PWM =  \SI{100}{\%}). Die PWM schwankt in einem Bereich von \SI{5}{\%} in der Nähe von \SI{100}{\%}. Die Sprünge, die im Verlauf der Drehzahl, Des Motorstroms und der PWM zu verzeichnen sind, können auf die gewählte Diskretisierung der Getriebeübersetzung zurückgeführt werden. \textcolor{red}{Das stufenlose Getriebe ermöglicht den optimalen Betrieb des Motors, welcher in diesem Fall bei voller Leistungsentnahme ist. Es ermöglicht eine derartige Wandlung des der Drehzahl, sodass einerseits die PWM bei \SI{100}{\%} ist und andererseits der Motorstrom dem maximalen Dauerstrom entspricht. Also ein Betriebspunkt bei Volllast. Dies kann durch das Getriebe dauerhaft gehalten werden.} 
+Die Steiggeschwindigkeit weist einen beinahe asymptotischen Verlauf von anfänglich \SI{21}{m/s} an den Grenzwert von \SI{26}{m/s} auf. Entsprechend dieser hohe Geschwindigkeiten braucht der Quadrocopter nur \SI{14}{min} bis zum Erreichen der maximalen Höhe. \\
 In der Realität besitzt ein stufenloses Getriebe jedoch immer ein Eigengewicht und zeichnet sich durch einen vergleichsweise schlechten Wirkungsgrad aus (\SI{0.8}{} zu etwa \SI{0.95}{} bei einem Stufengetriebe).
-\todo[inline]{Quelle} Die hohen Verluste liegen in der hohen erforderlichen Reibkraft und Verstellkraft begründet. Unter Berücksichtigung dieser verringert sich der Höhengewinn schrittweise, je größer das Getriebegewicht und dessen Verluste ausfallen. Stufenlose Getriebe existieren im Modellbau, allerdings nur für Lastkraftwagenmodelle. Das Gewicht eines einzelnen Getriebes beläuft sich dabei auf mehr als \SI{700}{g}, wobei die Verstellelektronik nicht berücksichtigt wurde. Für einen vierrotorigen Multicopter entspräche das einem Zusatzgewicht von mehr als \SI{2800}{g}. 
-Trotz seines Nutzens für die Höhenleistung werden die Vorteile eines CVT-Getriebes durch dessen Nachteile überkompensiert. Ein solches Getriebe bedeutet bei all seiner Kampaktheit und Effizienz letztendlich große Zusatzmasse und einen weitere, verlustbehaftete Komponenten innerhalb der Antriebskette. In Bezug auf die optimale Massenverteilung aus Kapitel \ref{sec:massenverteilung} und die besagte Richtung einer Optimierung der Verhältnisse verändert Getriebe die Massenaufteilung in Richtung einer schlechteren. Aus all diesen Gründen kann von dem Einsatz eines CVT-Getriebes abgesehen werden.
+\todo[inline]{Quelle} Die hohen Verluste können auf die hohe erforderliche Reibkraft und Verstellkraft zurückgeführt werden. Unter Berücksichtigung dieser verringert sich der Höhengewinn schrittweise, je größer das Getriebegewicht und dessen Verluste ausfallen. Stufenlose Getriebe existieren im Modellbau, allerdings nur für Lastkraftwagenmodelle. Das Gewicht eines einzelnen Getriebes beläuft sich dabei auf mehr als \SI{700}{g}, wobei die Verstellelektronik nicht berücksichtigt wurde. Für einen vierrotorigen Multicopter entspräche das einem Zusatzgewicht von mehr als \SI{2800}{g}. 
+Trotz seines Nutzens für die Höhenleistung werden die Vorteile eines CVT-Getriebes durch dessen Nachteile überkompensiert. Ein solches Getriebe bedeutet bei all seiner Kampaktheit und Effizienz letztendlich große Zusatzmasse und einen weitere, verlustbehaftete Komponenten innerhalb der Antriebskette. In Bezug auf die optimale Massenverteilung aus Kapitel \ref{sec:massenverteilung} und die besagte Richtung einer Optimierung der Verhältnisse verändert Getriebe die Massenaufteilung in Richtung einer schlechteren. Aus all diesen Gründen kann von dem Einsatz eines CVT-Getriebesfür einen Multicopter abgesehen werden.
 
 
 
