--- a/Sicherheitskopie/print_nomenclature.tex
+++ b/Sicherheitskopie/print_nomenclature.tex
@@ -24,9 +24,12 @@ vi und funktioniert wie der vi-Editor im Textmodus auf jedem Terminal!
 % ******************************************************************************
 \section*{Akrynome}
 \begin{longtable}{lp{13cm}}
+	CVT & Continuously Variable Transmission \\
 	ESC & Electronic Speed Control (Motorregler)\\
 	PWM & Pulsweitenmodulation\\
-	TOC & Top Of Climb
+	TOC & Top Of Climb\\
+	UAV & Unmanned Aerial Vehicle\\
+	VTOL & Vertical Take Off and Landing
 \end{longtable}
 % ******************************************************************************
 %
@@ -36,7 +39,7 @@ vi und funktioniert wie der vi-Editor im Textmodus auf jedem Terminal!
 \begin{longtable}{lp{2.5cm}p{10.5cm}}
 	\textbf{Notation} & \textbf{Einheit} & \textbf{Beschreibung}\\
 	\ensuremath{a}	& \si{m/s}		& Schallgeschwindigkeit \\
-	\ensuremath{A}	& \si{N}		& Auftriebskraft \\
+	\ensuremath{A}	& \si{N}		& aerodyn. Auftriebskraft \\
 	\ensuremath{c}	& -				& Beiwert \\
 	\ensuremath{C}	& \si{As}		& Kapazität \\
 	\ensuremath{\dot{C}} & \si{1/s}	& Entladerate (C-Rate) \\
@@ -56,8 +59,8 @@ vi und funktioniert wie der vi-Editor im Textmodus auf jedem Terminal!
 	\ensuremath{p}	& \si{Pa}		& Druck \\
 	\ensuremath{P}	& \si{W}		& Leistung \\
 	\ensuremath{r}	& \si{m}		& Radius \\
-	\ensuremath{R}	& \si{J/kg.K}	& Gaskonstante der Luft \\
-	\ensuremath{R}	& \si{\Omega}	& Widerstand \\
+	\ensuremath{R}	& \si{J/(kg.K)}	& Gaskonstante der Luft \\
+	\ensuremath{R}	& \si{\ohm}		& elektr. Widerstand \\
 	\ensuremath{S}	& \si{N}		& Schubkraft \\
 	\ensuremath{T}	& \si{K}		& Temperatur\\
 	\ensuremath{u}	& \si{m/s}		& Windgeschwindigkeit in x-Richtung \\
@@ -65,7 +68,7 @@ vi und funktioniert wie der vi-Editor im Textmodus auf jedem Terminal!
 	\ensuremath{V}	& \si{m/s}		& Fluggeschwindigkeit \\
 	\ensuremath{\dot{V}} & \si{m/s^2} & Ableitung der Geschwindigkeit (Beschleunigung) \\
 	\ensuremath{w}	& \si{m/s}		& Windgeschwindigkeit in z-Richtung \\
-	\ensuremath{W}	& \si{N}		& Widerstandskraft \\
+	\ensuremath{W}	& \si{N}		& aerodyn. Widerstandskraft \\
 	\ensuremath{x,X}& -				& in Längsrichtung des Fluggeräts \\
 	\ensuremath{y,Y}& -				& in Seitenrichtung des Fluggeräts \\
 	\ensuremath{z,Z}& -				& in Höhenrichtung des Fluggeräts
@@ -100,7 +103,7 @@ vi und funktioniert wie der vi-Editor im Textmodus auf jedem Terminal!
 	\ensuremath{\rho}	& \si{kg/m^3}		& Luftdichte \\
 	\ensuremath{\sigma}	& \si{^\circ}		& Schubeinstellwinkel\\
 	\ensuremath{\omega}	& \si{J/kg}			& Energiedichte \\
-	\ensuremath{\Omega}	& \si{1/s}/\si{RPM}	& Drehzahl
+	\ensuremath{\Omega}	& \si{1/s} o. \si{RPM}	& Drehzahl
 	
 		
 	
