--- a/Sicherheitskopie/nachbildung.tex
+++ b/Sicherheitskopie/nachbildung.tex
@@ -89,7 +89,7 @@ Die verbleibende Kapazität im TOC im Programm wird mit Abweichungen von ledigli
 Weiterhin ist anzumerken, dass Koriakin mit deutlich abweichenden Steiggeschwindigkeit zu \SI{10}{m/s} aufgestiegen ist. In Programm wurde der Endzustand erreicht, wenn \SI{10}{m/s} nicht mehr fliegbar sind. Dabei werden geringere, eventuell noch fliegbare Geschwindigkeiten außer Acht gelassen. Eine kontinuierliche Verringerung der Geschwindigkeit auf \SI{0}{m/s} fand deshalb nicht statt. Unabhängig davon ist die Annahme einer Steiggeschwindigkeit von \SI{10}{m/s} akkurat. Der Steigflug mit dieser Steiggeschwindigkeit auf \SI{10260}{m} dauert \SI{17}{min} und \SI{6}{sec}. Dies ist gerade einmal \SI{11}{sec} kürzer als die tatsächliche Flugzeit von \SI{17}{min} und \SI{17}{sec} zum TOC in \cite{Anderson.2018}.\\
 %Die signifikantesten Unterschiede zwischen Realität und Video sind bei der PWM gegeben, also dem Verhältnis zwischen Motorspannung und nomineller Batteriespannung. Die ermittelte PWM weicht im Schnitt um mehr als \SI{20}{\%} von der realen ab. Eine Ursache kann in dem Verhalten der Batteriespannung unter Last gefunden werden. In dem verwendeten Batteriemodell wird die nominelle Batteriespannung als konstant angesehen. Dieses berücksichtigt nicht den Spannungseinbruch unter Last oder die Spannung in Abhängigkeit des Entladezustandes. Diese Einflüsse beschreibt \cite{Tremblay.2009} in seinem Batteriemodell. Durch diesen Einfluss ist die tatsächliche Spannung geringer als die nominelle. Das könnte erklären, warum die PWM so bedeutend geringer ausfällt als in Wirklichkeit. \\ 
 Die signifikantesten Unterschiede zwischen den im Video gezeigten und den vom Programm berechneten Leistungen sind bei der PWM gegeben, also dem Verhältnis zwischen Motorspannung und nomineller Batteriespannung. Die ermittelte PWM weicht im Schnitt um mehr als \SI{15}{\%} von der realen ab. Selbst die Implementierung eines lastabhängigen Batteriespannungsmodells nach \cite{Tremblay.2009} brachte nur eine Verbesserung von lediglich \SI{5}{\%}. Eine Ursache kann in der Abriegelung des Motorstroms gefunden werden. Da zum Ausgleich von Störeinflüssen immer noch eine gewisser Leistungsüberschuss gegeben sein muss, wird die PWM ab einem gewissen Wert nach oben hin abgeriegelt. \textcolor{red}{Dies wird auch durchgeführt, wenn der erreichbare Schub schwer zu händeln ist.} Dieses Verhalten wird in dem Modell nicht berücksichtigt. 
-\todo[inline]{genauer, Throttle limit}
+\todo[inline]{genauer, Throttle limit, da Spannung von der Batterie zu hoch, weil mehr Zellen und somit höhere Spannung, dadurch wird der Copter schwer zu handhaben.}
 
 Als weitere Einflüsse für die Abweichungen können die in Kap. \ref{sec:vernachlaessigungen_vereinfachungen} genannten Vernachlässigungen und Vereinfachungen aufgelistet werden. Ihr Einfluss auf die Gesamtabweichung kann allerdings als gering eingeschätzt werden.
 % Weitere Einflüsse für die Abweichungen sollen an dieser Stelle noch aufgelistet werden. Ihr Einfluss auf die Gesamtabweichung kann allerdings als gering eingeschätzt werden. \\
